infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-app-ingress # CHANGED
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/cors-allow-methods: 'GET, POST, OPTIONS, PUT, DELETE'
    nginx.ingress.kubernetes.io/cors-allow-headers: 'Content-Type'
spec:
  ingressClassName: nginx
  rules:
  - host: "localhost"
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 5001
      - path: /media # CHANGED from /recipes
        pathType: Prefix
        backend:
          service:
            name: media-service # CHANGED from recipe-service
            port:
              number: 5000
